--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "react/function-component-definition": 0,
         //  "@typescript-eslint/no-unsafe-call":0,
         "import/extensions": 0,
+        "no-alert":"off",
 
         "@typescript-eslint/no-unused-vars": [
             "warn",
