--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.9",
         "@tailwindcss/forms": "^0.5.3",
-      
         "firebase": "^9.12.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.0",
         "react-icons": "^4.6.0",
         "react-router-dom": "^6.4.2"
     },
